--- a/src/main/resources/templates/contratos/lista-contratos.html
+++ b/src/main/resources/templates/contratos/lista-contratos.html
@@ -11,7 +11,7 @@
 
         <h2>Lista de contratos</h2>
         <hr>
-        <a th:href="@{/contratos/criar}" class="btn btn-primary mb-3">Novo contrato</a>
+        <a th:href="@{/contratos/formCriacao}" class="btn btn-primary mb-3">Novo contrato</a>
         <br>
         <table class="table table-striped table-bordered">
             <thead>
