--- a/src/main/resources/templates/contratos/criar-contrato.html
+++ b/src/main/resources/templates/contratos/criar-contrato.html
@@ -11,6 +11,13 @@
         <h2>Criação de Contrato</h2>
         <hr>
         <form th:action="@{/contratos/criar}" th:object="${contrato}" method="POST" class="col-sm-4">
+
+            <label for="descricao"><strong>Descrição</strong></label>
+            <textarea class="form-control mb-4" th:field="${contrato.descricao}" id="descricao" required></textarea>
+
+            <label for="valor"><strong>Valor</strong></label>
+            <input class="form-control mb-4" type="text" name="valorFormatado" oninput="formatarValor(this)" id="valor" required>
+
             <label for="contratante"><strong>Contratante</strong></label>
             <select class="form-control mb-4" th:field="${contrato.contratante.id}" id="contratante" required>
                 <option value="">Selecione o contratante</option>
@@ -26,5 +33,23 @@
             <input class="btn btn-primary" type="submit" value="Salvar contrato">
         </form>
     </div>
+    <script th:inline="javascript">
+        /* Script JavaScript para formatação dinâmica */
+        function formatarValor(input) {
+            // Remove caracteres não numéricos
+            let valorFormatado = input.value.replace(/\D/g, '');
+
+            if (valorFormatado === "") {
+                input.value = "";
+                return;
+            }
+
+            // Formata o valor como um número com duas casas decimais
+            valorFormatado = (parseFloat(valorFormatado) / 100).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+
+            // Atualiza o valor no input
+            input.value = valorFormatado;
+        }
+    </script>
 </body>
 </html>
