--- a/src/main/resources/templates/contratos/lista-contratos.html
+++ b/src/main/resources/templates/contratos/lista-contratos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container-xl">
 
         <h2>Lista de contratos</h2>
         <hr>
@@ -16,6 +16,8 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <th>Id contrato</th>
+                <th>Valor</th>
+                <th>Descrição</th>
                 <th>Data de criação</th>
                 <th>Última alteração</th>
                 <th>Contratante</th>
@@ -23,6 +25,8 @@
             </thead>
             <tr th:each="contrato : ${contratos}">
                 <td th:text="${contrato.id}"/>
+                <td th:text="${#numbers.formatCurrency(contrato.valor)}"/>
+                <td th:text="${contrato.descricao}"/>
                 <td>
                     <span th:text="${#temporals.format(contrato.dataCriacao, 'dd/MM/yyyy')}"/>
                     <span> - </span>
