--- a/src/main/resources/templates/contratos/lista-contratos.html
+++ b/src/main/resources/templates/contratos/lista-contratos.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lista de contratos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container-xl">
+    <div class="container">
 
         <h2>Lista de contratos</h2>
         <hr>
@@ -15,30 +16,35 @@
         <br>
         <table class="table table-striped table-bordered">
             <thead>
-                <th>Id contrato</th>
-                <th>Valor</th>
-                <th>Descrição</th>
-                <th>Data de criação</th>
-                <th>Última alteração</th>
-                <th>Contratante</th>
-                <th>Contratado</th>
+                <th class="text-center align-middle">Id</th>
+                <th class="text-center align-middle">Valor</th>
+                <th class="text-center align-middle">Descrição</th>
+                <th class="text-center align-middle">Data de criação</th>
+                <th class="text-center align-middle">Última alteração</th>
+                <th class="text-center align-middle">Contratante</th>
+                <th class="text-center align-middle">Contratado</th>
+                <th class="text-center align-middle">Ações</th>
             </thead>
             <tr th:each="contrato : ${contratos}">
-                <td th:text="${contrato.id}"/>
-                <td th:text="${#numbers.formatCurrency(contrato.valor)}"/>
-                <td th:text="${contrato.descricao}"/>
-                <td>
+                <td th:text="${contrato.id}" class="text-center align-middle"/>
+                <td th:text="${#numbers.formatCurrency(contrato.valor)}" class="text-center align-middle"/>
+                <td th:text="${contrato.descricao}" class="text-center align-middle"/>
+                <td class="text-center align-middle">
                     <span th:text="${#temporals.format(contrato.dataCriacao, 'dd/MM/yyyy')}"/>
-                    <span> - </span>
                     <span th:text="${#temporals.format(contrato.dataCriacao, 'HH:mm')}"/>
                 </td>
-                <td>
+                <td class="text-center align-middle">
                     <span th:text="${#temporals.format(contrato.dataUltimaAlteracao, 'dd/MM/yyyy')}"/>
-                    <span> - </span>
                     <span th:text="${#temporals.format(contrato.dataUltimaAlteracao, 'HH:mm')}"/>
                 </td>
-                <td th:text="${contrato.contratante.nome}"/>
-                <td th:text="${contrato.contratado.nome}"/>
+                <td th:text="${contrato.contratante.nome}" class="text-center align-middle"/>
+                <td th:text="${contrato.contratado.nome}" class="text-center align-middle"/>
+                <td class="text-center align-middle">
+                    <a th:href="@{/contratos/formEdicao/{id}(id=${contrato.id})}" class="btn btn-primary btn-sm" title="Editar">
+                        <i class="bi bi-pen-fill"></i>
+                    </a>
+
+                </td>
             </tr>
         </table>
     </div>
