--- a/src/main/resources/templates/contratos/criar-contrato.html
+++ b/src/main/resources/templates/contratos/criar-contrato.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Criar Contrato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
+    <div th:replace="~{fragments/cabecalho :: cabecalho}"></div>
     <div class="container">
         <h2>Criação de Contrato</h2>
         <hr>
