--- a/src/main/resources/templates/contratos/lista-contratos.html
+++ b/src/main/resources/templates/contratos/lista-contratos.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
+    <div th:replace="~{fragments/cabecalho :: cabecalho}"></div>
     <div class="container">
-
         <h2>Lista de contratos</h2>
         <hr>
         <a th:href="@{/contratos/formCriacao}" class="btn btn-primary mb-3">Novo contrato</a>
