Função de deleção funcionando

--- a/src/main/resources/templates/contratos/lista-contratos.html
+++ b/src/main/resources/templates/contratos/lista-contratos.html
@@ -6,6 +6,34 @@
     <title>Lista de contratos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <style>
+        .modal-excluir {
+            background-color: rgba(0, 0, 0, 0.29);
+            width: 100%;
+            height: 100vh;
+            z-index: 999;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            top: 0;
+        }
+
+        .modal-excluir > form {
+            background-color: white;
+            padding: 15px;
+            border-radius: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .btns-container {
+            display: flex;
+            justify-content: end;
+            gap: 15px;
+        }
+    </style>
 </head>
 <body>
     <div th:replace="~{fragments/cabecalho :: cabecalho}"></div>
@@ -18,7 +46,7 @@
             <thead>
                 <th class="text-center align-middle">Id</th>
                 <th class="text-center align-middle">Valor</th>
-                <th class="text-center align-middle">Descrição</th>
+                <th class="text-center align-middle" style="min-width: 575px">Descrição</th>
                 <th class="text-center align-middle">Data de criação</th>
                 <th class="text-center align-middle">Última alteração</th>
                 <th class="text-center align-middle">Contratante</th>
@@ -39,14 +67,46 @@
                 </td>
                 <td th:text="${contrato.contratante.nome}" class="text-center align-middle"/>
                 <td th:text="${contrato.contratado.nome}" class="text-center align-middle"/>
-                <td class="text-center align-middle">
-                    <a th:href="@{/contratos/formEdicao/{id}(id=${contrato.id})}" class="btn btn-primary btn-sm" title="Editar">
-                        <i class="bi bi-pen-fill"></i>
-                    </a>
-
+                <td class="align-middle">
+                    <div class="d-flex justify-content-between">
+                        <a th:href="@{/contratos/formEdicao/{id}(id=${contrato.id})}" class="btn btn-primary btn-sm me-1" title="Editar">
+                            <i class="bi bi-pen-fill"></i>
+                        </a>
+                        <button class="btn btn-primary btn-sm apagar" title="Excluir" th:data-id="${contrato.id}">
+                            <i class="bi bi-trash-fill"></i>
+                        </button>
+                    </div>
                 </td>
             </tr>
         </table>
     </div>
+<!--    Modal excluir-->
+    <div class="modal-excluir">
+        <form method="POST">
+            <h3>Excluir contrato</h3>
+            <span>Tem certeza que deseja excluir o contrato?</span>
+            <div class="btns-container">
+                <div class="btn btn-primary" id="cancelar">Cancelar</div>
+                <button type="submit" class="btn btn-danger">Excluir</button>
+            </div>
+        </form>
+    </div>
+    <script>
+        const modal = document.querySelector(".modal-excluir");
+        const botoesDelete = document.querySelectorAll(".apagar");
+        const botaoCancelar = document.querySelector("#cancelar");
+        const formDelete = document.querySelector("form");
+        botoesDelete.forEach(btn => {
+            btn.addEventListener("click", () => {
+                modal.style.display = "flex";
+                const contratoId = btn.dataset.id;
+                formDelete.action = `/scd/contratos/excluir/${contratoId}`;
+            });
+        });
+
+        botaoCancelar.addEventListener("click", () => {
+            modal.style.display = "none";
+        })
+    </script>
 </body>
 </html>
