--- a/src/main/resources/templates/contratos/criar-contrato.html
+++ b/src/main/resources/templates/contratos/criar-contrato.html
@@ -12,6 +12,7 @@
     <div class="container">
         <h2>Criação de Contrato</h2>
         <hr>
+        <a th:href="@{/contratos/listar}" class="btn btn-secondary mb-3">Voltar</a>
         <form th:action="@{/contratos/criar}" th:object="${contrato}" method="POST" class="col-sm-4">
             <div class="mb-3">
                 <label for="valor"><strong>Valor</strong></label>
@@ -28,14 +29,13 @@
                     <option th:each="cliente : ${clientes}" th:value="${cliente.id}" th:text="${cliente.nome}"/>
                 </select>
             </div>
-            <div class="mb-3">
+            <div class="mb-4">
                 <label for="contratado"><strong>Contratado</strong></label>
                 <select class="form-control" th:field="${contrato.contratado.id}" id="contratado" required>
                     <option value="">Selecione o contratado</option>
                     <option th:each="gestor : ${gestores}" th:value="${gestor.id}" th:text="${gestor.nome}"/>
                 </select>
             </div>
-
             <input class="btn btn-primary" type="submit" value="Salvar contrato">
         </form>
     </div>
