--- a/src/main/resources/templates/contratos/lista-contratos.html
+++ b/src/main/resources/templates/contratos/lista-contratos.html
@@ -46,7 +46,7 @@
             <thead>
                 <th class="text-center align-middle">Id</th>
                 <th class="text-center align-middle">Valor</th>
-                <th class="text-center align-middle" style="min-width: 575px">Descrição</th>
+                <th class="text-center align-middle" style="width: 575px">Descrição</th>
                 <th class="text-center align-middle">Data de criação</th>
                 <th class="text-center align-middle">Última alteração</th>
                 <th class="text-center align-middle">Contratante</th>
@@ -70,10 +70,10 @@
                 <td class="align-middle">
                     <div class="d-flex justify-content-between">
                         <a th:href="@{/contratos/formEdicao/{id}(id=${contrato.id})}" class="btn btn-primary btn-sm me-1" title="Editar">
-                            <i class="bi bi-pen-fill"></i>
+                            Editar
                         </a>
-                        <button class="btn btn-primary btn-sm apagar" title="Excluir" th:data-id="${contrato.id}">
-                            <i class="bi bi-trash-fill"></i>
+                        <button class="btn btn-danger btn-sm apagar" title="Excluir" th:data-id="${contrato.id}">
+                            Excluir
                         </button>
                     </div>
                 </td>
