--- a/src/main/resources/templates/contratos/editar-contrato.html
+++ b/src/main/resources/templates/contratos/editar-contrato.html
@@ -19,7 +19,7 @@
 <div class="container">
     <h2>Editar contrato</h2>
     <hr>
-    <a th:href="@{/contratos/listar}" class="btn btn-secondary mb-3">Voltar</a>
+    <a th:href="@{/contratos/listar}" class="btn btn-outline-primary mb-3">Voltar</a>
     <form th:action="@{/contratos/editar}" th:object="${contrato}" method="POST" class="col-sm-4">
         <div class="mb-3">
             <label for="id" class="form-label"><strong>Id</strong></label>
@@ -27,11 +27,11 @@
         </div>
         <div class="mb-3">
             <label for="valor" class="form-label"><strong>Valor</strong></label>
-            <input type="text" id="valor" name="valorFormatado" class="form-control" th:value="${#numbers.formatCurrency(contrato.valor)}" onkeyup="formatarValor(this)">
+            <input type="text" th:maxlength="18" id="valor" name="valorFormatado" class="form-control" th:value="${#numbers.formatCurrency(contrato.valor)}" required onkeyup="formatarValor(this)">
         </div>
         <div class="mb-3">
             <label for="descricao" class="form-label"><strong>Descrição</strong></label>
-            <textarea id="descricao" name="descricao"  rows="6" class="form-control" th:field="*{descricao}"></textarea>
+            <textarea id="descricao" th:maxlength="200" name="descricao"  rows="6" class="form-control" th:field="*{descricao}" required></textarea>
         </div>
         <div class="mb-3">
             <label for="contratante"><strong>Contratante</strong></label>
